# hid_experiment

./: .clang-format  CMakeLists.txt  README.md  interpolation_strategies.cpp  interpolation_strategies.h  interpolators.cpp  interpolators.h  job.cpp  job.h  linear_job.cpp  linear_job.h  main.c  main.cpp  network.cpp  network.h  point.cpp  point.h  schedule.cpp  schedule.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
proto/: message.proto
